--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     rotate: 80deg;
   }
   .container{
-    @apply px-28;
+    @apply px-[1.25rem];
   }
   .darkerFull {
     @apply bg-black opacity-25 z-[10000] w-full h-full;
@@ -20,3 +20,10 @@
 
 
 /* Pure css */
+#root {
+  width: 100%;
+  height: 100%;
+  padding : 0;
+  margin: 0;
+  box-sizing: border-box;
+}
